# templates-practise

./: CMakeLists.txt
include/: XVector.h
src/: main.cpp
